fixed comment spacing after username

--- a/instagram/src/components/CommentsSection/CommentsSection.css
+++ b/instagram/src/components/CommentsSection/CommentsSection.css
@@ -12,6 +12,7 @@
 .userName {
   font-weight: bold;
   font-size: 12px;
+  padding: 0 1% 0 0;
 }
 
 /* CommentInput */
